# base_of_bot

./: .gitignore  CommandClass.py  DBClass.py  FunctionClass.py  MainClass.py  README.md  TgClass.py  VkClass.py  cron_start.py  migrations.py  settings.py  tg_bot.py  vk_bot.py
bot/classes/: CommandClass.py  DBClass.py  FunctionClass.py  MainClass.py  TgClass.py  VkClass.py  commands.py  example_functions.py  main_bot.py
bot/classes/battles/: battle.py  dungeon.py
bot/classes/chat_settings/: chat_settings_logic.py
bot/classes/execute/: execute_commands.py
bot/locks/: all_locks.py
bot/models/: chat.py  import_all_models.py  lock.py  message.py  platform_event.py
bot/modules/: migrations.py
bot/objects/: base_module.py  emojies.py
bot/utils/: images.py  keyboards.py  types.py
bot/utils/keyboard/: button.py  colors.py  keyboard.py
cron/: hello_from_cron.py
tg_bot/: pyproject.toml
utils/: types.py
vk_bot/: pyproject.toml
